--- a/clusters/production/helmrelease-metallb.yaml
+++ b/clusters/production/helmrelease-metallb.yaml
@@ -15,5 +15,11 @@ spec:
       version: 0.14.5
   install:
     createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   interval: 10m0s
+  timeout: 20m
   targetNamespace: metallb-system
