--- a/infrastructure/base/metallb/helmrelease.yaml
+++ b/infrastructure/base/metallb/helmrelease.yaml
@@ -12,6 +12,6 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: metallb
-      version: 0.14.5
+      # version: 0.14.5
   interval: 10m0s
   targetNamespace: metallb-system
