--- a/infrastructure/production/kustomization.yaml
+++ b/infrastructure/production/kustomization.yaml
@@ -1,17 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base/metallb
-patches:
-  - path: metallb-patch.yaml
-    target:
-      kind: HelmRelease
----
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-resources:
-  - ../base/cert-manager
-patches:
-  - path: cert-manager-patch.yaml
-    target:
-      kind: HelmRelease
+  - cert-manager
+  - metallb
