--- a/infrastructure/base/blocky/blocky.yaml
+++ b/infrastructure/base/blocky/blocky.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: blocky
+  name: truecharts
   namespace: blocky
 spec:
   interval: 24h
@@ -26,7 +26,7 @@ spec:
       version: "15.2.x"
       sourceRef:
         kind: HelmRepository
-        name: blocky
+        name: truecharts
         namespace: blocky
       interval: 12h
   values:
