--- a/clusters/production/flux-system/kustomization.yaml
+++ b/clusters/production/flux-system/kustomization.yaml
@@ -3,3 +3,11 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+patches:
+  - patch: |
+      - op: add
+        path: /spec/template/spec/containers/0/args/-
+        value: --helm-index-max-size=60000000
+    target:
+      kind: Deployment
+      name: "source-controller"
