--- a/infrastructure/base/blocky/blocky.yaml
+++ b/infrastructure/base/blocky/blocky.yaml
@@ -10,8 +10,9 @@ metadata:
   name: truecharts
   namespace: blocky
 spec:
-  interval: 24h
-  url: https://charts.truecharts.org
+  type: "oci"
+  interval: 5min
+  url: oci://tccr.io/truecharts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
