It seems unbound doesnt support spec.LoadbalancerIP.
Tried the metallb custom resource.

--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -39,7 +39,9 @@ spec:
             ip: "192.168.178.40"
     service:
       type: LoadBalancer
-      loadBalancerIP: 192.168.178.152
+      # loadBalancerIP: 192.168.178.152
+      annotations:
+        metallb.universe.tf/loadBalancerIPs: "192.168.178.152"
       #
       # forwardZones:
       # - name: "fake.net"
