--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -41,7 +41,7 @@ spec:
       type: LoadBalancer
       # loadBalancerIP: 192.168.178.152
       annotations:
-        metallb.universe.tf/loadBalancerIPs: "192.168.178.152"
+        metallb.universe.tf/address-pool: unbound
       #
       # forwardZones:
       # - name: "fake.net"
