Referenced newly created addresspools in l2 advertisement.

--- a/infrastructure/configs/metallb/L2Advertisement.yaml
+++ b/infrastructure/configs/metallb/L2Advertisement.yaml
@@ -3,4 +3,8 @@ kind: L2Advertisement
 metadata:
   name: l2metallb
   namespace: metallb-system
+spec:
+  ipAddressPools:
+  - traefik
+  - unbound
 
