--- a/infrastructure/production/kustomization.yaml
+++ b/infrastructure/production/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager
-  # - metallb
+  - metallb
   - longhorn
   # - blocky
   - cloudnativePG
-  # - unbound
+  - unbound
   - kube-prometheus-stack
 
