The secrets need the namespace to be created beforhand.

--- a/clusters/production/secrets.yaml
+++ b/clusters/production/secrets.yaml
@@ -5,6 +5,8 @@ metadata:
   name: my-secrets
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: infra-controllers
   decryption:
     provider: sops
     secretRef:
