--- a/clusters/production/secrets.yaml
+++ b/clusters/production/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: infra-controllers
+    - name: infra-cert-manager
   decryption:
     provider: sops
     secretRef:
