Put all files for metallb in one file.

--- a/infrastructure/production/metallb/kustomization.yaml
+++ b/infrastructure/production/metallb/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../../base/metallb
 patches:
-  - path: metallb-patch.yaml
+  - path: patch.yaml
     target:
       kind: HelmRelease
