--- a/infrastructure/production/metallb/patch.yaml
+++ b/infrastructure/production/metallb/patch.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: metallb
-  namespace: flux-system
+  namespace: metallb-system
 spec:
   chart:
     spec:
