--- a/infrastructure/base/kube-prometheus-stack/manifest.yaml
+++ b/infrastructure/base/kube-prometheus-stack/manifest.yaml
@@ -22,6 +22,7 @@ metadata:
   name: kube-prometheus-stack
   namespace: kube-prometheus-stack
 spec:
+  timeout: 15m
   interval: 30m
   chart:
     spec:
