--- a/infrastructure/production/longhorn/kustomization.yaml
+++ b/infrastructure/production/longhorn/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../../base/longhorn
 patches:
-  - path: longhorn-patch.yaml
+  - path: patch.yaml
     target:
       kind: HelmRelease
