--- a/infrastructure/base/kube-prometheus-stack/manifest.yaml
+++ b/infrastructure/base/kube-prometheus-stack/manifest.yaml
@@ -24,6 +24,7 @@ metadata:
 spec:
   timeout: 15m
   interval: 30m
+  timeout: 20m
   chart:
     spec:
       chart: kube-prometheus-stack
@@ -34,7 +35,11 @@ spec:
       interval: 12h
   install:
     crds: Create
+    remediation:
+      retries: 3
   upgrade:
     crds: CreateReplace
+    remediation:
+      retries: 3
   values:
     installCRDs: true
