--- a/infrastructure/configs/metallb/addressPool.yaml
+++ b/infrastructure/configs/metallb/addressPool.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   addresses:
   - 192.168.178.151/32
+  autoAssign: false
 ---
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
@@ -15,3 +16,4 @@ metadata:
 spec:
   addresses:
   - 192.168.178.152/32
+  autoAssign: false
