Added Failure remedation to unbound and metallb.
Added failure remedation.

--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -21,6 +21,14 @@ metadata:
 spec:
   timeout: 15m
   interval: 30m
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
   chart:
     spec:
       chart: unbound
