--- a/infrastructure/base/metallb/manifest.yaml
+++ b/infrastructure/base/metallb/manifest.yaml
@@ -25,6 +25,14 @@ metadata:
   name: metallb
   namespace: metallb-system
 spec:
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
   chart:
     spec:
       chart: metallb
