--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -48,6 +48,7 @@ spec:
             ip: "192.168.178.40"
           - name: "traefik.lan.vandelocht.uk"
             ip: "192.168.178.151"
+          - name: "longhorn.lan.vandelocht.uk"
           forwardZones:
           - name: "longhorn.lan.vandelocht.uk"
             forwardHosts:
