--- a/infrastructure/base/cloudflare-ddns/manifest.yaml
+++ b/infrastructure/base/cloudflare-ddns/manifest.yaml
@@ -1,9 +1,9 @@
-# ---
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: cloudflare-ddns
-# ---
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cloudflare-ddns
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,6 +13,7 @@ metadata:
   labels:
     io.kompose.service: cloudflare-ddns
   name: cloudflare-ddns
+  namespace: cloudflare-ddns
 spec:
   replicas: 1
   selector:
