--- a/infrastructure/production/cloudflare-ddns/patch.yaml
+++ b/infrastructure/production/cloudflare-ddns/patch.yaml
@@ -2,9 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cloudflare-ddns
-  namespace: flux-system
+  # namespace: flux-system
 spec:
   template:
     spec:
       containers:
-        - image: favonia/cloudflare-ddns:1.11.0
+        - env:
+          image: favonia/cloudflare-ddns:1.10.1
