--- a/infrastructure/base/cloudflare-ddns/manifest.yaml
+++ b/infrastructure/base/cloudflare-ddns/manifest.yaml
@@ -43,7 +43,7 @@ spec:
               value: "true"
             - name: PUID
               value: "1000"
-          image: favonia/cloudflare-ddns:1.10.1
+          # image: favonia/cloudflare-ddns:1.10.1
           name: cloudflare-ddns
           securityContext:
             capabilities:
