--- a/infrastructure/production/blocky/kustomization.yaml
+++ b/infrastructure/production/blocky/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../../base/blocky
 patches:
-  - path: blocky-patch.yaml
+  - path: patch.yaml
     target:
       kind: HelmRelease
