--- a/infrastructure/production/cert-manager/kustomization.yaml
+++ b/infrastructure/production/cert-manager/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../../base/cert-manager/
 patches:
-  - path: cert-manager-patch.yaml
+  - path: patch.yaml
     target:
       kind: HelmRelease
