--- a/infrastructure/production/traefik/patch.yaml
+++ b/infrastructure/production/traefik/patch.yaml
@@ -1,8 +1,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: unbound
-  namespace: flux-system
+  name: traefik
+  namespace: traefik
 spec:
   chart:
     spec:
