Created a room in matrix and changed the channel id accordingly.

--- a/clusters/production/notifications.yaml
+++ b/clusters/production/notifications.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: matrix
   address: https://nope.chat
-  channel: "#flux:nope.chat"
+  channel: "!xyMMZTXeRxqVfPiDDY:nope.chat"
   secretRef:
     name: matrix-token
 ---
