Disabled summary of notification.

--- a/clusters/production/notifications.yaml
+++ b/clusters/production/notifications.yaml
@@ -16,7 +16,7 @@ metadata:
   name: notifications
   namespace: flux-system
 spec:
-  summary: "cluster addons"
+  # summary: "cluster addons"
   eventMetadata:
     env: "production"
     cluster: "talos-proxmox-cluster"
