--- a/clusters/production/secrets.yaml
+++ b/clusters/production/secrets.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: my-secrets
+  name: secrets
   namespace: flux-system
 spec:
   dependsOn:
-    - name: infra-cert-manager
+    - name: cert-manager
   decryption:
     provider: sops
     secretRef:
