--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -14,3 +14,19 @@
 #   path: ./apps/production/actual
 #   prune: true
 #   wait: true
+# ---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: actual
+  namespace: flux-system
+spec:
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/production/actual-kompose
+  prune: true
+  wait: true
