--- a/infrastructure/configs/actual/default-headers.yaml
+++ b/infrastructure/configs/actual/default-headers.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: default-headers
-  namespace: actual
+  namespace: actual-server
 spec:
   headers:
     browserXssFilter: true
