--- a/infrastructure/configs/actual/middleware.yaml
+++ b/infrastructure/configs/actual/middleware.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: svc-actual-headers
-  namespace: actual
+  namespace: actual-server
 spec:
   headers:
     customRequestHeaders:
