--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -52,6 +52,8 @@ spec:
             ip: "192.168.178.151"
           - name: "grafana.lan.vandelocht.uk"
             ip: "192.168.178.151"
+          - name: "actual.lan.vandelocht.uk"
+            ip: "192.168.178.151"
     service:
       type: LoadBalancer
 
