--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -30,3 +30,19 @@ spec:
   path: ./apps/production/actual-kompose
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: gitea
+  namespace: flux-system
+spec:
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/production/gitea
+  prune: true
+  wait: true
