--- a/apps/production/gitea/patch.yaml
+++ b/apps/production/gitea/patch.yaml
@@ -1,8 +1,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: actual
-  namespace: actual
+  name: gitea
+  namespace: gitea
 spec:
   chart:
     spec:
