--- a/apps/base/gitea/manifest.yaml
+++ b/apps/base/gitea/manifest.yaml
@@ -38,7 +38,7 @@ spec:
         namespace: gitea
       interval: 12h
   values:
-    replicaCount: 1
+    # replicaCount: 1
 
     ## @section strategy
     ## @param strategy.type strategy type
