Forgot to change namespace for secret.

--- a/secrets/gitea-admin-secret.yaml
+++ b/secrets/gitea-admin-secret.yaml
@@ -7,7 +7,7 @@ kind: Secret
 metadata:
     creationTimestamp: null
     name: gitea-admin-secret
-    namespace: default
+    namespace: gitea
 sops:
     kms: []
     gcp_kms: []
