--- a/infrastructure/configs/gitea/ingressConfig.yaml
+++ b/infrastructure/configs/gitea/ingressConfig.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: default-headers
+  name: svc-gitea-headers
   namespace: gitea
 spec:
   headers:
