--- a/infrastructure/configs/gitea/ingressConfig.yaml
+++ b/infrastructure/configs/gitea/ingressConfig.yaml
@@ -13,7 +13,7 @@ spec:
     - match: Host(`gitea.lan.vandelocht.uk`)
       kind: Rule
       services:
-        - name: gitea
+        - name: gitea-http
           port: 3000
       middlewares:
         - name: svc-gitea-headers
