Disabled signin view and user explore page.
Nobody should see anything without signing in.

--- a/apps/base/gitea/manifest.yaml
+++ b/apps/base/gitea/manifest.yaml
@@ -122,6 +122,7 @@ spec:
         service:
           DISABLE_REGISTRATION: true
           SHOW_REGISTRATION_BUTTON: false
+          REQUIRE_SIGNIN_VIEW: true
         database:
           DB_TYPE: postgres
         indexer:
