Added hibiscus server.

--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -46,3 +46,19 @@ spec:
   path: ./apps/production/gitea
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: hibiscus-server
+  namespace: flux-system
+spec:
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/production/hibiscus-server
+  prune: true
+  wait: true
