--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -41,7 +41,8 @@ spec:
                 secretKeyRef:
                   name: hibiscus-password-secret
                   key: password
-            - USE_SSL: false
+            - name: USE_SSL
+              value: false
           image: docker.io/janvandelocht/hibiscus-server:v2.10.20
           name: hibiscus-server
           ports:
