--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -27,7 +27,7 @@ spec:
             - name: DB_ADDR
               value: mysql
             - name: DB_PORT
-              value: 3306
+              value: "3306"
             - name: DB_DRIVER
               value: mysql
             - name: DB_NAME
