hibiscus: Added dns entry and ingress.

--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -54,7 +54,7 @@ spec:
             ip: "192.168.178.151"
           - name: "actual.lan.vandelocht.uk"
             ip: "192.168.178.151"
-          - name: "gitea.lan.vandelocht.uk"
+          - name: "hibiscus.lan.vandelocht.uk"
             ip: "192.168.178.151"
     service:
       type: LoadBalancer
