--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -63,7 +63,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - name: "8080"
+    - protocol: TCP
       port: 8080
       targetPort: 8080
   selector:
