hibiscus: Added basic auth via traefik.

--- a/infrastructure/configs/hibiscus-server/ingressConfig.yaml
+++ b/infrastructure/configs/hibiscus-server/ingressConfig.yaml
@@ -15,7 +15,9 @@ spec:
       services:
         - name: hibiscus-server
           port: 8080
-      # middlewares:
+      middlewares:
+        - name: hibiscus-server-basicauth
+          namespace: hibiscus-server
       #   - name: svc-hibiscus-headers
   tls:
     secretName: hibiscus-lan-vandelocht-uk-production-tls
@@ -33,6 +35,15 @@ spec:
   commonName: "hibiscus.lan.vandelocht.uk"
   dnsNames:
   - "hibiscus.lan.vandelocht.uk"
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: hibiscus-server-basicauth
+  namespace: hibiscus-server
+spec:
+  basicAuth:
+    secret: hibiscus-password-secret
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
