--- a/infrastructure/configs/metallb/addressPool.yaml
+++ b/infrastructure/configs/metallb/addressPool.yaml
@@ -14,6 +14,19 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
+  name: hibiscus-server-mysql
+  namespace: metallb-system
+spec:
+  addresses:
+  - 192.168.178.152/32
+  serviceAllocation:
+    priority: 50
+    namespaces:
+      - hibiscus-server
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
   name: unbound
   namespace: metallb-system
 spec:
