hibiscus: Allowed external network policy.

--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -112,3 +112,6 @@ spec:
     primary:
       service:
         type: LoadBalancer
+    networkPolicy:
+      enabled: true 
+      allowExternal: true
