--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -37,6 +37,8 @@ metadata:
   name: gitea
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: longhorn
   interval: 1h
   retryInterval: 1m
   timeout: 5m
