--- a/apps/production/actual/kustomization.yaml
+++ b/apps/production/actual/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/actual
+  - ingressConfig.yaml
 patches:
   - path: patch.yaml
     target:
