--- a/apps/production/gitea/kustomization.yaml
+++ b/apps/production/gitea/kustomization.yaml
@@ -2,6 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/gitea
+  - ingressConfig.yaml
+  - gitea-admin-secret.yaml
+  - gitea-postgresql.yaml
+  - gitea-redis.yaml
+
 patches:
   - path: patch.yaml
     target:
