--- a/apps/production/hibiscus-server/kustomization.yaml
+++ b/apps/production/hibiscus-server/kustomization.yaml
@@ -2,6 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/hibiscus-server
+  - ingressConfig.yaml
+  - hibiscus-password-secret.yaml
+  - hibiscus-mysql-secret.yaml
 # patches:
 #   - path: patch.yaml
 #     target:
