--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -1,33 +1,20 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: actual
-#   namespace: flux-system
-# spec:
-#   interval: 1h
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: ./apps/production/actual
-#   prune: true
-#   wait: true
-# ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: actual-server
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: longhorn
+    - name: traefik
+    - name: cert-manager
   interval: 1h
   retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/production/actual-kompose
+  path: ./apps/production/actual
   prune: true
   wait: true
 ---
@@ -39,6 +26,8 @@ metadata:
 spec:
   dependsOn:
     - name: longhorn
+    - name: traefik
+    - name: cert-manager
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -57,6 +46,9 @@ metadata:
 spec:
   dependsOn:
     - name: longhorn
+    - name: traefik
+    - name: cert-manager
+    - name: metallb
   interval: 1h
   retryInterval: 1m
   timeout: 5m
