--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -21,8 +21,13 @@ metadata:
   name: longhorn
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
-    - name: metallb
+    - name: traefik
+    - name: cert-manager
   interval: 1h
   retryInterval: 25m
   timeout: 30m
@@ -39,6 +44,10 @@ metadata:
   name: cert-manager
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -55,6 +64,10 @@ metadata:
   name: unbound
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: metallb
   interval: 1h
@@ -73,8 +86,13 @@ metadata:
   name: traefik
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: metallb
+    - name: cert-manager
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -91,6 +109,13 @@ metadata:
   name: kube-prometheus-stack
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: traefik
+    - name: cert-manager
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -107,6 +132,10 @@ metadata:
   name: cloudflare-ddns
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -116,21 +145,3 @@ spec:
   path: ./infrastructure/production/cloudflare-ddns
   prune: true
   wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: configs
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: metallb
-    - name: cert-manager
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./infrastructure/configs
-  prune: true
