--- a/clusters/production/notifications.yaml
+++ b/clusters/production/notifications.yaml
@@ -1,30 +1,17 @@
-apiVersion: notification.toolkit.fluxcd.io/v1beta3
-kind: Provider
-metadata:
-  name: matrix
-  namespace: flux-system
-spec:
-  type: matrix
-  address: https://nope.chat
-  channel: "!xyMMZTXeRxqVfPiDDY:nope.chat"
-  secretRef:
-    name: matrix-token
 ---
-apiVersion: notification.toolkit.fluxcd.io/v1beta3
-kind: Alert
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
 metadata:
   name: notifications
   namespace: flux-system
 spec:
-  # summary: "cluster addons"
-  eventMetadata:
-    env: "production"
-    cluster: "talos-proxmox-cluster"
-  providerRef:
-    name: matrix
-  eventSeverity: info
-  eventSources:
-    - kind: GitRepository
-      name: '*'
-    - kind: Kustomization
-      name: '*'
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  interval: 10m0s
+  path: ./infrastructure/production/notifications
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
