--- a/infrastructure/production/kube-prometheus-stack/kustomization.yaml
+++ b/infrastructure/production/kube-prometheus-stack/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/kube-prometheus-stack
+  - ingressConfig.yaml
 patches:
   - path: patch.yaml
     target:
