--- a/infrastructure/production/traefik/ingressConfig.yaml
+++ b/infrastructure/production/traefik/ingressConfig.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -20,3 +19,26 @@ spec:
           kind: TraefikService
   tls:
     secretName: traefik-lan-vandelocht-uk-production-tls
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: traefik-lan-vandelocht-uk
+  namespace: traefik
+spec:
+  secretName: traefik-lan-vandelocht-uk-production-tls
+  issuerRef:
+    name: letsencrypt-production
+    kind: ClusterIssuer
+  commonName: "traefik.lan.vandelocht.uk"
+  dnsNames:
+  - "traefik.lan.vandelocht.uk"
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: traefik-dashboard-basicauth
+  namespace: traefik
+spec:
+  basicAuth:
+    secret: traefik-dashboard-auth
