--- a/infrastructure/production/traefik/kustomization.yaml
+++ b/infrastructure/production/traefik/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/traefik
+  - ingressConfig.yaml
+  - secret-traefik-dashboard.yaml
 patches:
   - path: patch.yaml
     target:
