--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -7,7 +7,7 @@ spec:
   dependsOn:
     - name: longhorn
     - name: traefik
-    - name: cert-manager
+    - name: cert-manager-config
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -27,7 +27,7 @@ spec:
   dependsOn:
     - name: longhorn
     - name: traefik
-    - name: cert-manager
+    - name: cert-manager-config
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -47,7 +47,7 @@ spec:
   dependsOn:
     - name: longhorn
     - name: traefik
-    - name: cert-manager
+    - name: cert-manager-config
     - name: metallb
   interval: 1h
   retryInterval: 1m
