--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   dependsOn:
     - name: longhorn
-    - name: traefik
+    - name: traefik-config
     - name: cert-manager-config
   interval: 1h
   retryInterval: 1m
@@ -26,7 +26,7 @@ metadata:
 spec:
   dependsOn:
     - name: longhorn
-    - name: traefik
+    - name: traefik-config
     - name: cert-manager-config
   interval: 1h
   retryInterval: 1m
@@ -46,7 +46,7 @@ metadata:
 spec:
   dependsOn:
     - name: longhorn
-    - name: traefik
+    - name: traefik-config
     - name: cert-manager-config
     - name: metallb
   interval: 1h
