--- a/infrastructure/production/cloudflare-ddns/kustomization.yaml
+++ b/infrastructure/production/cloudflare-ddns/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/cloudflare-ddns
+  - secret-cf-token-ddns.yaml
 patches:
   - path: patch.yaml
     target:
