--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -18,6 +18,22 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: metallb-config
+  namespace: flux-system
+spec:
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/production/metallb/config
+  prune: true
+  wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: longhorn
   namespace: flux-system
 spec:
@@ -91,7 +107,7 @@ spec:
     secretRef:
       name: sops-age
   dependsOn:
-    - name: metallb
+    - name: metallb-config
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -113,7 +129,7 @@ spec:
     secretRef:
       name: sops-age
   dependsOn:
-    - name: metallb
+    - name: metallb-config
     - name: cert-manager-config
   interval: 1h
   retryInterval: 1m
@@ -136,7 +152,7 @@ spec:
     secretRef:
       name: sops-age
   dependsOn:
-    - name: metallb
+    - name: metallb-config
     - name: traefik
     - name: cert-manager-config
   interval: 1h
