--- a/apps/production/gitea/gitea-redis.yaml
+++ b/apps/production/gitea/gitea-redis.yaml
@@ -1,33 +1,42 @@
-# apiVersion: v1
-# data:
-#     redis-password: ENC[AES256_GCM,data:40jOK2M6C+fmPwNCVKgujjtnJ5Z5p9CQiu71JWC34cMjg5J3BS8t/9q0CoGA5KEtCywa20k2QdlnkxoQHEK0RA==,iv:cHPe1vt9IKlKk2F94zICKT+cYCE/UhDJsy7uWFhQ6Qw=,tag:GKWbxfOiw8DdwwAD4j0i6g==,type:str]
-# kind: Secret
-# metadata:
-#     creationTimestamp: null
-#     name: gitea-redis
-#     namespace: gitea
-#     labels:
-#         app.kubernetes.io/managed-by: Helm
-#     annotations:
-#         meta.helm.sh/release-name: gitea
-#         meta.helm.sh/release-namespace: gitea
-# sops:
-#     kms: []
-#     gcp_kms: []
-#     azure_kv: []
-#     hc_vault: []
-#     age:
-#         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
-#           enc: |
-#             -----BEGIN AGE ENCRYPTED FILE-----
-#             YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMFIzMndlOTVVUVl2Vktx
-#             b0V6ckJvd3ZpNGxpVXFDZmRrU1diRlpmY2xrCkIzbXNVYkV0dlJPRWhkZDUzMFll
-#             OTNCMTBSaDczcVFvZElucGY3VmwrekUKLS0tIC9YdHk2TjZFc09SUHNzTHd6RzZr
-#             ekZGYm9PSE5zNXQ4ZlJuZGZ1M1pmd2MKjbn+ZLPZT1AGFKGYNfxzP82EHZoufXrt
-#             5FggOTBGs9yDj01KjB2f6C28nhOs/Ucf9mg3/FUAv8GYWmdItdL19Q==
-#             -----END AGE ENCRYPTED FILE-----
-#     lastmodified: "2024-08-05T21:14:56Z"
-#     mac: ENC[AES256_GCM,data:XqhzZsSHFm3VWELMhpPPG80BtjW7w0RZrx0aZV5hZEYZWbjWUOJsTVmB+b1P0rBnNSuVRnrUXDRqr1IjJ30xvl4HRe9A3+4+Vi6N/5U9ha0kDzM5iktFvMHLMsEvBGugznYAln2zwcLnYfTj8y8hOCko8+nOL7yKQ5qiYve98EE=,iv:uCgSFOy0gqPaCqO9yB3HFvky6ufipjN0F4RFt2f+N0g=,tag:5y/OR+I7VJ2erdD4I/YfdQ==,type:str]
-#     pgp: []
-#     encrypted_regex: ^(data|stringData)$
-#     version: 3.8.1
+apiVersion: v1
+data:
+    redis-password: ENC[AES256_GCM,data:M6LeiLprZnvsvumlTVpdKhM1Nz4gAOR7pq2GgxAYEJylkuBmwZaWUkMM/Fm/C2MhxnsQ5cl7GwnfMcjUhZmqjQ==,iv:MmU2PW/h9GzCGbqYQAcAbNu6Lo5+gO/c1LFD/CLWl/Q=,tag:QwmXfL6pwECULLGhEDYJfg==,type:str]
+kind: Secret
+metadata:
+    annotations:
+        meta.helm.sh/release-name: gitea
+        meta.helm.sh/release-namespace: gitea
+    creationTimestamp: "2024-08-06T05:39:16Z"
+    labels:
+        app.kubernetes.io/instance: gitea
+        app.kubernetes.io/managed-by: Helm
+        app.kubernetes.io/name: redis
+        app.kubernetes.io/version: 7.2.5
+        helm.sh/chart: redis-19.6.2
+        helm.toolkit.fluxcd.io/name: gitea
+        helm.toolkit.fluxcd.io/namespace: gitea
+    name: gitea-redis
+    namespace: gitea
+    resourceVersion: "302946"
+    uid: 4f9f3679-ead3-4f0c-8b20-4d460eb97a2e
+type: Opaque
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRTTZUZmxxcnhWY2RST1Jy
+            UU43OGJIZmdSUU5vZklXcDViV3JFb296ZFdnCmNlWm1QdWNaTWlrVldtZlh3bjYr
+            YUdPdHlEc3VZeUs5enE5clNGblpNRG8KLS0tIFlNem5BV3dLTDdNUXJTd3JlNzRQ
+            bzZSalhLRHEvcW94UXpKNUVRNzhMVkEKNO8bN3B7Dgo522icceeZ/yAsV9pYrVYt
+            q1j0g1RaLze1WznYKnKQZD18E5nkDD6M0cK+crhRBKUhA8tzN4/N8A==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T08:57:15Z"
+    mac: ENC[AES256_GCM,data:WTQjCJt6nVyfcCsUi9tUswXXj4LfX1s8tkA+hMeDQ6JZI+guYmxrA1IElREEwwJ7cTjS4K6Jpla65PYdNL/qFK0lC6LouK+Rhq31hCWXPXHLTlJIC2aR5UQMnLZXsZ0draAV09NRa0fbp0hRxa68513bY7WtwgaSxF/88kl5toY=,iv:4xPVvoYm7Kgtvo6wN03CPUZHYeaJa9/Hj3FhlvawN2o=,tag:TfswqQnQxsDh4sRlb4qK2Q==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
