unbound: Added dns entry for hibiscus database.

--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -56,6 +56,8 @@ spec:
             ip: "192.168.178.151"
           - name: "hibiscus.lan.vandelocht.uk"
             ip: "192.168.178.151"
+          - name: "hibiscusql.lan.vandelocht.uk"
+            ip: "192.168.178.155"
     service:
       type: LoadBalancer
 
