--- a/infrastructure/production/longhorn/kustomization.yaml
+++ b/infrastructure/production/longhorn/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base/longhorn
   - ingressConfig.yaml
+  - longhorn-r2-backups.yaml
 patches:
   - path: patch.yaml
     target:
