--- a/infrastructure/base/longhorn/manifest.yaml
+++ b/infrastructure/base/longhorn/manifest.yaml
@@ -38,4 +38,4 @@ spec:
   values:
     defaultSettings:
       backupTargetCredentialSecret: longhorn-r2-backups
-      backupTarget: "s3://longhorn@auto/backup"
+      backupTarget: "s3://longhorn@auto/"
