--- a/infrastructure/production/longhorn/kustomization.yaml
+++ b/infrastructure/production/longhorn/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base/longhorn
   - ingressConfig.yaml
   - longhorn-r2-backups.yaml
+  - longhorn-crypto-sc.yaml
 patches:
   - path: patch.yaml
     target:
